# Dashboard-Bioaddmed

./: .env.example  .gitignore  README.md  bioaddmed_ultra_plan_techniczny.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  apps.py  authentication.py  forms.py  models.py  permissions.py  schema_extensions.py  serializers.py  throttles.py  views.py
backend/apps/achievements/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/announcements/: admin.py  models.py  serializers.py  views.py
backend/apps/audit/: admin.py  models.py  services.py
backend/apps/core/: admin.py  models.py  serializers.py
backend/apps/dashboard/: admin.py  services.py  views.py
backend/apps/knowledge/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/meetings/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  views.py
backend/apps/projects/: admin.py  models.py  permissions.py  serializers.py  services.py  views.py
backend/apps/reports/: admin.py  models.py  serializers.py  services.py  views.py
backend/apps/resources/: admin.py  models.py  serializers.py  views.py
backend/apps/tasks/: admin.py  models.py  serializers.py  services.py  tasks.py  views.py
backend/apps/voting/: admin.py  apps.py  models.py  (+4 more)
backend/config/: celery.py  settings.py  urls.py
backend/scripts/: smoke_check.py
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_projects.py  test_tasks.py  test_voting.py
(+82 files in other folders)
